# JChessV2

./: .ChessBoard.cpp.swp  .ChessBoard.h.swp  .JChessV2.cpp.swp  .MainMenu.cpp.swp  .MainMenu.h.swp  .Scene.cpp.swp  .Scene.h.swp  .UI.cpp.swp  .UI.h.swp  .gitignore  .gitignore.swp  CMakeLists.txt  ChessBoard.cpp  ChessBoard.h  Global.h  JChessV2.cpp  MainMenu.cpp  MainMenu.h  Scene.cpp  Scene.h  UI.cpp  UI.h  ]  build.sh  compile_commands.json  mkmg.out  test.cpp  test.out
.cache/clangd/index/: BoardRep.cpp.27E12AE92197E33C.idx  BoardRep.h.8D406697DEC9E087.idx  BoardRep.h.E0C71B9339876A63.idx  Game.cpp.57FC212CA9A38B11.idx  Game.cpp.B758021090ED98F3.idx  Game.h.24841F421E5E0140.idx  Game.h.87D52E066914927B.idx  GameCLI.cpp.82B0B867AB2C2786.idx  GameCLI.cpp.F27421E4A3ADF61A.idx  GameCLI.h.637C1E6EE74052AF.idx  GameCLI.h.7C4D211D4D92BC74.idx  GameGUI.cpp.4D99A4AC1E6D49C1.idx  GameGUI.cpp.AF626C3B0C2DFBE1.idx  GameGUI.h.0CA2B526AC992F74.idx  GameGUI.h.73951586F7CD61FA.idx  GameUI.cpp.43309EF969CAD425.idx  GameUI.cpp.CE40A122CFE50050.idx  GameUI.h.6251542A127E9D6B.idx  GameUI.h.EAE3A39BD00D3105.idx  Global.h.1B828F727E5DEC0B.idx  Global.h.21F2EC77DC65F46B.idx  JChessV2.cpp.54157F62F76D7895.idx  JChessV2.cpp.81DE0DBE231A66B0.idx  Move.cpp.C9934185ABF90AAF.idx  Move.cpp.EDC1D03B75C32DAE.idx  Move.h.45A2B35CA19DFBD3.idx  Move.h.B6C5CB6C41E6F261.idx  Player.cpp.3C78044E2C8BA049.idx  Player.cpp.D2F84C29365C10A2.idx  Player.h.AD9FC3C649106F23.idx  Player.h.B0B0595212A05089.idx  PlayerAI.cpp.3896724EF52DB4A0.idx  PlayerAI.cpp.6920E6B6114AF772.idx  PlayerAI.h.C2915D6F83BD3FE9.idx  PlayerAI.h.D951D7A1F205714F.idx  PlayerLocal.cpp.196AFC7D57DF2628.idx  PlayerLocal.cpp.76A3BFC6BB491822.idx  PlayerLocal.h.F246E8B1F96A5CF9.idx  PlayerLocal.h.F8BCCE034B012922.idx  PlayerRemote.cpp.6F1C2DD16FA4062A.idx  (+38 more)
chessboard/: BoardRep.cpp  BoardRep.h  ChessBoard.h  dir_table.cpp  magics copy.h  magics.cpp  magics.h  tf_table.h
chessboard/move_gen/: magics.cpp  magics.h  move_tables.cpp
cpp/: Scene.cpp  UI.cpp
cpp/scenes/: MainMenu.cpp
docs/: Algorithms.rst  CodeStructure.rst  Dependencies.rst  Guide.rst
docs/Evaluation/: AlphaBetaSearch.rst  MinMaxSearch.rst  transpositiontable.rst
docs/Goals/: Idk.rst
file_gen/magic_numbers/: mgn.txt  mj_nums.txt  mk_magic_nums.cpp  mkmg.out  not_my_magics.c
file_gen/tf_table/: mk_to_from.cpp  mk_to_from.out
head/: ChessBoard.h  Scene.h  UI.h
head/scenes/: MainMenu.h
include/: glad.c
include/glad/: glad.c  glad.h
scenes/: Scene.cpp  Scene.h
scenes/Game/: ChessBoard.cpp  ChessBoard.h  Game.cpp  Game.h  Move.cpp  Move.h
scenes/Game/Player/: AI.h  LocalPlayer.h  Player.cpp  Player.h  PlayerAI.cpp  PlayerAI.h  PlayerLocal.cpp  PlayerLocal.h  PlayerRemote.cpp  PlayerRemote.h  PlayerTheFish.cpp  PlayerTheFish.h  TheFish.h
scenes/Game/UI/: GameCLI.cpp  GameCLI.h  GameGUI.cpp  GameGUI.h  GameUI.cpp  GameUI.h
scenes/StartMenu/: StartCLI.cpp  StartCLI.h  StartGUI.cpp  StartGUI.h  StartMenu.cpp  StartMenu.h  StartUI.h
scripts/: gen-compile-commands.sh
src/client/: BoardSurfaceDisp.cpp  BoardSurfaceDisp.h  Global.h  JChessV2.cpp
src/client/gl_macros/: camera.cpp  camera.h  mesh.cpp  (+7 more)
src/client_cli/: JChessV2.cpp  client.cpp  client.h  defs.h  game_cli.cpp  game_cli.h
src/cppsrv/: jcsrv.cpp
src/server/: PROTOCOL.md  client_soc.h  game_utils.cpp  game_utils.h  jcsrv.cpp  packet_types.h  server.cpp  server_defs.h  server_utils.cpp  server_utils.h  test_client.cpp
src/tools/: aprint_mailbox  dec2bb.cpp  maibox_history  print_mailbox.cpp  print_mailbox.sh
tools/perft/: perft.py  perft2.py  temp_jchess_perft_output  temp_jchess_perft_output_0  temp_stockfish_display_output  temp_stockfish_perft_output  temp_stockfish_perft_output_0
(+79 files in other folders)
